...
                android:id="@+id/linear_layout_tabs_recent_searches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/tabItemsColor"
                    android:foreground="?attr/selectableItemBackground"
                    android:textAlignment="viewStart"
                    android:theme="@style/SelectableItemTheme"
...
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:text="@string/recent_searches"
                        tools:text="Recent Searches" />

                    <TextView
                        android:id="@+id/clear_recent_queries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:foreground="?attr/selectableItemBackground"
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    layout="@layout/fragment_search_filter"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    tools:listitem="@layout/item_movie_search" />

                <ListView
                    android:id="@+id/listView_recent_queries"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    tools:listitem="@layout/recent_query_item" />
            </FrameLayout>
        </LinearLayout>
...
